fix overflow

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -413,6 +413,7 @@
           
           -webkit-mask: var(--mask); 
           mask: var(--mask);
+          overflow: hidden;
         }
       }
       .catch-phrase {
